--- a/index.html
+++ b/index.html
@@ -539,22 +539,22 @@
             {
                 name: 'Silvia',
                 image: 'silvia.jpg',
-                text: 'De [ciudad], trabaja en [trabajo]. Le encanta [hobby]. Dato curioso: [algo gracioso].'
+                text: 'Campeona de Payasos del Mercosur 2024 tras ganar con su rutina de malabares con facturas en Montevideo.'
             },
             {
                 name: 'Pedro',
                 image: 'pedro.jpg',
-                text: 'De [ciudad], trabaja en [trabajo]. Le encanta [hobby]. Dato curioso: [algo gracioso].'
+                text: 'Pasó 48 horas arrestado en 2019 por comer palmitos con las manos en un restaurante de Palermo.'
             },
             {
                 name: 'Javier',
                 image: 'javier.jpg',
-                text: 'De [ciudad], trabaja en [trabajo]. Le encanta [hobby]. Dato curioso: [algo gracioso].'
+                text: 'No se lava las orejas desde 2017 porque cree que "el cuerpo tiene sus propios mecanismos de limpieza"'
             },
             {
                 name: 'Damián',
                 image: 'damian.jpg',
-                text: 'De [ciudad], trabaja en [trabajo]. Le encanta [hobby]. Dato curioso: [algo gracioso].'
+                text: 'Es vampiro pero no lo sabe: odia los espejos, solo sale de noche y duerme en un ataúd vintage "porque era una ganga"'
             }
         ];
         
@@ -622,8 +622,8 @@
                 },
                 200: { 
                     question: '¿Cuál es el animal más grande que ha existido en la Tierra, superando incluso en tamaño a los dinosaurios más conocidos?', 
-                    answers: ['Megalodón', 'Ballena Azul', 'Calamar Gigante', 'Ballena Jorobada'], 
-                    correct: 1 
+                    answers: ['Megalodón', 'Ballena Jorobada', 'Calamar Gigante', 'Ballena Azul'], 
+                    correct: 3 
                 },
                 300: { 
                     question: 'Las plantas carnívoras suelen vivir en suelos pantanosos. ¿Qué elemento químico vital buscan obtener principalmente de los insectos al no encontrarlo en la tierra?', 
@@ -644,8 +644,8 @@
             3: { // Laboratorio
                 100: { 
                     question: 'Nuestro sistema solar tiene 8 planetas. ¿Cuál es el más cercano al Sol?', 
-                    answers: ['Venus', 'Mercurio', 'Marte', 'Tierra'], 
-                    correct: 1 
+                    answers: ['Mercurio', 'Venus', 'Marte', 'Tierra'], 
+                    correct: 0
                 },
                 200: { 
                     question: 'La tabla periódica organiza los elementos químicos. ¿Qué elemento tiene el símbolo \'Au\' y ha sido valorado por la humanidad durante milenios?', 
@@ -686,13 +686,13 @@
                 },
                 400: { 
                     question: 'En el año 79 d.C., la erupción del Monte Vesubio sepultó dos ciudades romanas bajo ceniza volcánica, preservándolas casi intactas. Una era Pompeya, ¿cuál era la otra?', 
-                    answers: ['Ostia', 'Herculano', 'Capua', 'Nápoles'], 
-                    correct: 1 
+                    answers: ['Herculano', 'Ostia', 'Capua', 'Nápoles'], 
+                    correct: 0
                 },
                 500: { 
                     question: 'En 1853, el comodoro Matthew Perry forzó la apertura de Japón al comercio occidental tras más de 200 años de aislamiento. ¿Cómo se llamaba esta política de cierre japonesa?', 
-                    answers: ['Bushido', 'Sakoku', 'Shogunato', 'Meiji Ishin'], 
-                    correct: 1 
+                    answers: ['Bushido', 'Meiji Ishin', 'Shogunato', 'Sakoku'], 
+                    correct: 3 
                 }
             },
             5: { // Locura
@@ -702,7 +702,7 @@
                     correct: 2 
                 },
                 200: { 
-                    question: 'En Python, ¿cuánto es \'2\' + \'2\'?', 
+                    question: 'En Python, ¿cuánto es \"2\" + \"2\"?', 
                     answers: ['4', '22', '"4"', 'Error'], 
                     correct: 1 
                 },
@@ -712,14 +712,14 @@
                     correct: 0 
                 },
                 400: { 
-                    question: 'Según los técnicos de soporte IT, ¿cuál es la solución más efectiva para el 90% de los problemas informáticos?', 
-                    answers: ['Reinstalar el sistema operativo', 'Reiniciar el equipo', 'Actualizar los drivers', 'Llamar a un experto'], 
-                    correct: 1 
+                    question: '¿Como arreglo la computadora?', 
+                    answers: ['Pedir ayuda', 'Reiniciar el equipo', 'Comprar una nueva', 'Golpearla suavemente'], 
+                    correct: 3 
                 },
                 500: { 
                     question: 'Si esta pregunta tiene cuatro opciones y eliges una al azar, ¿cuál es la probabilidad de que aciertes la respuesta correcta?', 
-                    answers: ['25%', '50%', '0%', '25%'], 
-                    correct: 3 
+                    answers: ['25%', '25%', '25%', '25%'], 
+                    correct: 2 
                 }
             }
         };
